# PyFunc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPP_BACKEND.md  CPP_USAGE_GUIDE.md  DOCUMENTATION.md  PUBLISHING_GUIDE.md  QUICK_PUBLISH.md  README.md  SECURITY.md  ZIG_BACKEND.md  build_cpp.py  build_go.py  build_windows.py  build_zig.py  check_native_c.py  check_native_c_attributes.py  create_docs_dir.py  publish.py  pyproject.toml  setup.py  stuff_to_add.md  test_cpp_build.py
docs/: conf.py  index.rst  modules.rst  pyfunc.errors.rst  pyfunc.pipeline.rst  pyfunc.utils.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyfunc.errors.html  pyfunc.pipeline.html  pyfunc.placeholder.html  pyfunc.utils.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree  modules.doctree  (+4 more)
examples/: backend_control_guide.py  bitwise_test.py  comprehensive_example.py  cpp_backend_example.py  cpp_control_example.py  example.py  performance_example.py  rust_threshold_example.py  simple_example.py  template_mapping_example.py  troubleshooting_example.py  zig_backend_example.py
pyfunc/: __init__.py  pipeline.py  placeholder.py
pyfunc/backends/: __init__.py  backend_selector.py  cpp_backend.py  go_backend.py  python_backend.py  zig_backend.py
pyfunc/native/: bindings.cpp  operations.cpp  operations.hpp
pyfunc/native_go/: __init__.py  bitwise.go  go.mod
pyfunc/native_rust/: Cargo.toml
pyfunc/native_rust/src/: lib.rs
pyfunc/native_zig/: build.zig  math_ops.zig
tests/: test_cpp_backend.py  test_new_features.py
(+8 files in other folders)
