[project]
name = "pyfunc"
version = "0.1.0"
description = "A chainable functional pipeline for transforming values or iterables in Python."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [] # Add any external dependencies here

[project.urls]
"Homepage" = "https://github.com/your_username/pyfunc"
"Bug Tracker" = "https://github.com/your_username/pyfunc/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."] # Search for packages in the current directory
include = ["pyfunc*"] # Include packages starting with "pyfunc"
